--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     ext.kotlin_version = '1.4.20-M1'
     ext {
         buildToolsVersion = "29.0.2"
-        minSdkVersion = 16
+        minSdkVersion = 21
         compileSdkVersion = 29
         targetSdkVersion = 29
         playServicesLocationVersion = "17.0.0"
@@ -25,7 +25,7 @@ buildscript {
 
 allprojects {
     repositories {
-        mavenLocal()
+       // mavenLocal()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url("$rootDir/../node_modules/react-native/android")
@@ -36,7 +36,8 @@ allprojects {
         }
 
         google()
-        jcenter()
-        maven { url 'https://www.jitpack.io' }
+        mavenCentral()
+       // jcenter()
+       // maven { url 'https://www.jitpack.io' }
     }
 }
